--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,11 @@ a {
     text-decoration: none;
 }
 
+nav a {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
 a:hover {
     text-decoration: underline;
 }
